# recombo_public

./: .dockerignore  .gitignore  9_1_log.txt  Analyzer.h  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile.am  Makefile.in  README  README.md  argprocessor.cpp  autocorr.cpp  bfacfProbabilities.cpp  bfacfProbabilities.h  bfacfProbabilitiesFromZ.cpp  bfacfProbabilitiesFromZ.h  bfacfProbabilitiesFromZFixed.cpp  clk.cpp  clk.h  clkCigar.cpp  clkConformationAsList.cpp  clkConformationAsList.h  clkConformationBfacf3.cpp  clkConformationBfacf3.h  clkConformationNewsud.cpp  clkConformationSeqconvert.h  configure  configure.ac  conformation.cpp  conformationWlc.cpp  conformationWlc.h  genericConformation.h  legacy.cpp  legacy.h  legacyBfacf.cpp  legacyBfacf.h  librarian.h  main.cpp  mainFixegc.cpp  (+16 more)
.github/workflows/: ci.yml
config/: bfacf.json  mmc_composite.json  mmc_reconnection.json  mmc_serial.json  recombo.json  zanalyzer.json
initial/: 0_1  0_1s  10_124  10_127  10_128  10_131  10_133  10_134  10_142  10_149  10_151  10_2_1a  10_2_1b  10_2_1c  10_2_1d  12_2_1a  12_2_1b  12_2_1c  12_2_1d  14_2_1a  14_2_1b  14_2_1c  14_2_1d  16_2_1a  16_2_1b  16_2_1c  16_2_1d  18_2_1a  18_2_1b  18_2_1c  18_2_1d  2_2_1a  2_2_1b  2_2_1c  2_2_1d  3_1  3_1s  4_1  4_1s  4_2_1a  (+538 more)
knotplot/: idknot_example.kps  idlink_example.kps  idlink_example.txt
scripts/: BMAnalyzer.py  checkChirality.kps  ninex.kps
solution/recombo/: recombo.sln
solution/recombo/idknot/: idknot.vcxproj  idknot.vcxproj.filters
solution/recombo/mmc/: ReadMe.txt  config.txt  mmc.cpp  mmc.vcxproj  mmc.vcxproj.filters  resource.h  stdafx.cpp
solution/recombo/recombo/: recombo.cpp  recombo.vcxproj  recombo.vcxproj.filters  stdafx.cpp
solution/recombo/recomboFromFile/: recomboFromFile.vcxproj  recomboFromFile.vcxproj.filters
solution/recombo/tests/: tests.cpp  tests.vcxproj  tests.vcxproj.filters
solution/recombo/zAnalyzer/: zAnalyzer.vcxproj  zAnalyzer.vcxproj.filters
src/: Analyzer.h  Makefile  argprocessor.h  autocorr.cpp  autocorr.h  bfacfMain.cpp  bfacfProbabilitiesFromZFixed.h  bfacf_config.cpp  bfacf_config.h  clkCigar.h  clkConformationAsList.cpp  clkConformationAsList.h  clkConformationBfacf3.cpp  clkConformationBfacf3.h  clkConformationSeqconvert.cpp  conformation.h  conformationAsList.cpp  conformationAsList.h  cross.c  cross.h  homfly1_21.c  id.cpp  id.h  idknot.cpp  legacy.cpp  legacy.h  legacyBfacf.cpp  legacyBfacf.h  main.cpp  mainWrithe.cpp  mmcMain.cpp  mmc_config.cpp  mmc_config.h  mmchain.cpp  mmchain.h  newsud.cpp  newsud.h  polynomesAZ.c  polynomesAZ.h  pseudorandom.cpp  (+23 more)
src/tests/: Makefile  argprocessorTests.cpp  argprocessorTests.h  autocorrTests.cpp  autocorrTests.h  basicTests.cpp  basicTests.h  clkTests.cpp  clkTests.h  randomTests.cpp  randomTests.h  recomboCriteriaTests.cpp  recomboCriteriaTests.h  sampleUnitTestMain.cpp  sampleUnitTests.cpp  sampleUnitTests.h  unitTestMain.cpp  unitTests.h
src/xinger/: Makefile  main.cpp  random.cpp  random.h  util.cpp  util.h  xinger.cpp  xinger.h
test/: CMakeLists.txt  test_data_util.h
test/regression/: CMakeLists.txt  bfacf_regression_test.cpp  bfacf_step_test.cpp  writhe_test.cpp
test/unit/: CMakeLists.txt  clk_test.cpp  mmc_config_test.cpp  newsud_test.cpp  pseudorandom_test.cpp  recombo_criteria_test.cpp
test/unit/data/: bfacf_probabilities.json  invalid_mmc_config.json  partial_mmc_config.json  recombo_conformations.json  recombo_paras_config.json  trefoil_conformations.json  valid_mmc_config.json
